--- a/src/main/java/formGUI.form
+++ b/src/main/java/formGUI.form
@@ -128,6 +128,31 @@
               </component>
             </children>
           </grid>
+          <grid id="c5dfc" binding="applyTagPanel" layout-manager="GridBagLayout">
+            <constraints/>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="46a88" class="javax.swing.JTextField" binding="tagName">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="c86c5" class="javax.swing.JButton" binding="tagApplyButton">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Apply Tag to results"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </toolbar>
       <tabbedpane id="aaf4f" binding="sectionsPanel">
