--- a/src/main/java/formGUI.form
+++ b/src/main/java/formGUI.form
@@ -19,20 +19,42 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="3748a" class="javax.swing.JButton" binding="newButton" default-binding="true">
+          <grid id="10c06" binding="updatePanel" layout-manager="GridBagLayout">
             <constraints/>
-            <properties>
-              <text value="New"/>
-              <verticalAlignment value="1"/>
-            </properties>
-          </component>
-          <component id="f2712" class="javax.swing.JButton" binding="syncButton" default-binding="true">
-            <constraints/>
-            <properties>
-              <text value="Sync"/>
-              <verticalAlignment value="1"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="3748a" class="javax.swing.JButton" binding="newButton" default-binding="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="New"/>
+                  <verticalAlignment value="1"/>
+                </properties>
+              </component>
+              <component id="f2712" class="javax.swing.JButton" binding="syncButton" default-binding="true">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Sync"/>
+                  <verticalAlignment value="1"/>
+                </properties>
+              </component>
+              <component id="24bca" class="javax.swing.JButton" binding="newServerButton">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Add Server"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
           <grid id="b93c2" binding="searchBoxPanel" layout-manager="GridBagLayout">
             <constraints/>
             <properties/>
@@ -179,67 +201,7 @@
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children>
-                  <grid id="11b23" binding="singleEmailPane" layout-manager="FlowLayout" hgap="200" vgap="0" flow-align="0">
-                    <constraints/>
-                    <properties/>
-                    <border type="bevel-raised">
-                      <font/>
-                      <title-color color="-4473925"/>
-                    </border>
-                    <children>
-                      <component id="b749" class="javax.swing.JLabel" binding="timeSent">
-                        <constraints/>
-                        <properties>
-                          <text value="&quot;Time Sent&quot;"/>
-                        </properties>
-                      </component>
-                      <component id="1aa3b" class="javax.swing.JLabel" binding="emailHeader">
-                        <constraints/>
-                        <properties>
-                          <text value="&quot;Generic Email Header&quot;"/>
-                        </properties>
-                      </component>
-                      <component id="500b1" class="javax.swing.JLabel" binding="senderLabel">
-                        <constraints/>
-                        <properties>
-                          <text value="&quot;Generic Sender&quot;"/>
-                        </properties>
-                      </component>
-                      <component id="ff08a" class="javax.swing.JLabel" binding="tagLabel">
-                        <constraints/>
-                        <properties>
-                          <text value="&quot;No Tags Applied&quot;"/>
-                        </properties>
-                      </component>
-                      <grid id="9e8ab" binding="singleEmailButtons" layout-manager="FlowLayout" hgap="5" vgap="0" flow-align="1">
-                        <constraints/>
-                        <properties/>
-                        <border type="none"/>
-                        <children>
-                          <component id="9533" class="javax.swing.JButton" binding="readButton" default-binding="true">
-                            <constraints/>
-                            <properties>
-                              <text value="Read"/>
-                            </properties>
-                          </component>
-                          <component id="989f7" class="javax.swing.JButton" binding="tagButton" default-binding="true">
-                            <constraints/>
-                            <properties>
-                              <text value="Tag"/>
-                            </properties>
-                          </component>
-                          <component id="e9669" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
-                            <constraints/>
-                            <properties>
-                              <text value="Delete"/>
-                            </properties>
-                          </component>
-                        </children>
-                      </grid>
-                    </children>
-                  </grid>
-                </children>
+                <children/>
               </scrollpane>
             </children>
           </grid>
